--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -1,3 +1,8 @@
+<!-- File Name: index.ejs
+	  Student Name: Tahera Firdose
+    Student ID: 301170091
+    Date: 26/10/2021 -->
+
 <% include ../partials/header.ejs %>
 
     <!-- MAIN CONTENT -->
